Cleanup compile command